# pump-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/reference/: account-layouts.md
src/: config.rs  lib.rs  main.rs
src/cmd/: autosell.rs  balance.rs  config_cmd.rs  create.rs  info.rs  keys.rs  mod.rs  portfolio.rs  snipe.rs  swap.rs  trade.rs  watch.rs
src/core/: bonding_curve.rs  constants.rs  global.rs  instructions.rs  mod.rs  pda.rs  pump_swap.rs  rug_check.rs  token_accounts.rs
src/output/: format.rs  mod.rs
src/rpc/: client.rs  mod.rs
src/wallet/: jito.rs  keypair.rs  mod.rs  signer.rs
tests/: idl_account_counts.rs  idl_account_wiring.rs  idl_discriminators.rs  idl_layout_guards.rs  local_validator_integration.rs  simulate_mainnet.rs  smoke.sh
tests/common/: mod.rs
