[package]
name = "pump-cli"
version = "0.1.0"
edition = "2021"
description = "Minimal CLI for Pump.fun trading on Solana"

[[bin]]
name = "pump-cli"
path = "src/main.rs"

[lib]
name = "pump_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
solana-sdk = "2"
solana-client = "2"
borsh = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
comfy-table = "7"
colored = "2"
bip39 = "2"
bs58 = "0.5"
dirs = "5"
sha2 = "0.10"
spl-token = "6"
spl-associated-token-account = "4"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
